Testes de css e barra de progresso do upload

--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -717,38 +717,14 @@
       <button text="➕ Criar Nova Variável" callbackKey="CREATE_VARIABLE" data-translate-text="createVariableButton"></button>
       <block type="const_modifier"></block>
       <sep></sep>
-      <block type="int_declaration">
-        <value name="VALUE">
-          <shadow type="math_number"><field name="NUM">0</field></shadow>
-        </value>
-      </block>
-      <block type="float_declaration">
-        <value name="VALUE">
-          <shadow type="math_number"><field name="NUM">0.0</field></shadow>
-        </value>
-      </block>
-      <block type="bool_declaration">
-        <value name="VALUE">
-          <shadow type="logic_boolean"><field name="BOOL">TRUE</field></shadow>
-        </value>
-      </block>
-      <block type="string_declaration">
-        <value name="VALUE">
-          <shadow type="text"><field name="TEXT">texto</field></shadow>
-        </value>
-      </block>
-      <block type="char_declaration">
-        <value name="VALUE">
-          <shadow type="text"><field name="TEXT">'A'</field></shadow>
-        </value>
-      </block>
+      <block type="int_declaration"></block>
+      <block type="float_declaration"></block>
+      <block type="bool_declaration"></block>
+      <block type="string_declaration"></block>
+      <block type="char_declaration"></block>
       <sep></sep>
       <block type="int_variable_get"></block>
-      <block type="int_variable_set">
-        <value name="VALUE">
-          <shadow type="math_number"><field name="NUM">0</field></shadow>
-        </value>
-      </block>
+      <block type="int_variable_set"></block>
     </category>
     <category name="Funções" colour="#e80074" custom="PROCEDURE" data-translate-name="CAT_FUNCTIONS">
     </category>
